--- a/src/view/components/layout.css
+++ b/src/view/components/layout.css
@@ -16,6 +16,7 @@ body {
     background-color: black;
     width: 100%;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-around;
     overflow: hidden;
     padding: .5em;
